# codership-mariadb-server

./: .gitmodules  CMakeLists.txt  README.md  zz_pr-review.txt
cmake/: wsrep.cmake
extra/mariabackup/: CMakeLists.txt  backup_copy.cc  backup_mysql.cc  wsrep.cc  xtrabackup.cc
include/: m_ctype.h  wsrep.h
include/mysql/: service_wsrep.h
libservices/: wsrep_service.c
mysql-test/: mysql-test-run.pl
mysql-test/include/: galera_clear_sync_point.inc  galera_set_sync_point.inc  galera_signal_sync_point.inc  galera_variables_ok.inc  wait_until_connected_again.inc
mysql-test/suite/galera/: disabled.def  galera_2nodes.cnf  galera_2nodes_as_slave.cnf
mysql-test/suite/galera_3nodes/: disabled.def  suite.pm
mysql-test/suite/galera_3nodes_ee/: suite.pm
mysql-test/suite/galera_3nodes_sr/: disabled.def
mysql-test/suite/galera_ee/: suite.pm
mysql-test/suite/galera_spider/: disabled.def  galera2x2_spider2.cnf  my.cnf  suite.pm
mysql-test/suite/wsrep/: common.pm  disabled.def
mysys/: file_logger.cc
plugin/galera_replication/: CMakeLists.txt
plugin/server_audit/: service_logger.h
plugin/wsrep_info/: plugin.cc
plugin/wsrep_thd_info/: CMakeLists.txt  plugin.cc
scripts/: wsrep_sst_common.sh  wsrep_sst_mariabackup.sh  wsrep_sst_mysqldump.sh  wsrep_sst_rsync.sh
sql/: CMakeLists.txt  backup.cc  events.cc  ha_sequence.cc  handler.cc  handler.h  item_func.cc  item_strfunc.cc  item_strfunc.h  lock.cc  log.cc  log.h  log_event.cc  log_event.h  log_event_client.cc  log_event_server.cc  mdl.cc  mysqld.cc  rpl_gtid.cc  rpl_parallel.cc  service_wsrep.cc  signal_handler.cc  slave.cc  sp_head.cc  sql_acl.cc  sql_admin.cc  sql_base.cc  sql_builtin.cc.in  sql_class.cc  sql_class.h  sql_insert.cc  sql_lex.cc  sql_load.cc  sql_parse.cc  sql_plugin.cc  sql_plugin_services.ic  sql_plugin_services.inl  sql_select.cc  sql_sequence.cc  sql_show.cc  (+50 more)
storage/innobase/btr/: btr0cur.cc
storage/innobase/log/: log0log.cc  (+1 more)
storage/spider/: spd_trx.cc
(+554 files in other folders)
